Adding CSS Style

--- a/web/index.html
+++ b/web/index.html
@@ -6,52 +6,104 @@
  <meta name="author" content="ronnelreposo">
  <link rel="stylesheet" href="css/normalize.css">
  <link rel="stylesheet" href="css/skeleton.css">
- 
+ <link rel="stylesheet" href="css/style.css">
  <title>Breast Cancer Cell Classification</title>
 </head>
 <body>
- <div class="container">
-  <div class="row">
-   <span class="three columns">Clump Thickness</span>
-   <input class="two columns" type="number" id="inp-clump-thick">
-  </div>
-  <div class="row">
-   <span class="three columns">Uniformity of Cell Size:</span>
-   <input class="two columns" type="number" id="inp-uni-cell-size">
-  </div>
-  <div class="row">
-   <span class="three columns">Uniformity of Cell Shape:</span>
-   <input class="two columns" type="number" id="inp-uni-cell-shape">
-  </div>
-  <div class="row">
-   <span class="three columns">Marginal Adhesion:</span>
-   <input class="two columns" type="number" id="inp-marginal-adhesion">
-  </div>
-  <div class="row">
-   <span class="three columns">Single Epithelial Cell Size:</span>
-   <input class="two columns" type="number" id="inp-single-epithe-cell-size">
-  </div>
-  <div class="row">
-   <span class="three columns">Bare Nuclei:</span>
-   <input class="two columns" type="number" id="inp-bare-nucli">
-  </div>
-  <div class="row">
-   <span class="three columns">Bland Chromatin:</span>
-   <input class="two columns" type="number" id="inp-bland-chrom">
-  </div>
-  <div class="row">
-   <span class="three columns">Normal Nucleoli:</span>
-   <input class="two columns" type="number" id="inp-normal-nucle">
-  </div>
-  <div class="row">
-   <span class="three columns">Mitoses:</span>
-   <input class="two columns" type="number" id="inp-mitoses">
-  </div>
-  <div class="row">
-   <button class="button-primary three columns" id="inp-classify">Classify</button>
-   <span class="two columns" id="out-elem" ></span>
-  </div>
- </div>
+    <div class="container">
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Clump Thickness:</label>
+             </div>
+             
+            <div class="three columns">    
+                <input class="data-input-num u-full-width" type="number" id="inp-clump-thick">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Uniformity of Cell Size:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-uni-cell-size">
+            </div>
+        </div>
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Uniformity of Cell Shape:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-uni-cell-shape">
+            </div>
+        </div>
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Marginal Adhesion:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-marginal-adhesion">
+            </div>
+        </div>
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Single Epithelial Cell Size:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-single-epithe-cell-size">
+            </div>
+        </div>
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Bare Nuclei:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-bare-nucli">
+            </div>
+        </div>
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Bland Chromatin:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-bland-chrom">
+            </div>
+        </div>
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Normal Nucleoli:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-normal-nucle">
+            </div>
+        </div>  
+        <div class="row">
+            <div class="three columns">
+                <label class="data-txt">Mitoses:</label>
+            </div>
+            <div class="three columns">
+                <input class="data-input-num u-full-width" type="number" id="inp-mitoses">
+            </div>
+        </div>
+        <div class="row">
+            <div class="three columns">
+                &nbsp;
+            </div>
+            <div class="three columns">
+                <button class="button-primary u-pull-right" id="inp-classify">Classify</button>      
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="three columns">
+                &nbsp;
+            </div>
+            <div class="three columns">
+                <label class="data-input-num u-full-width" id="out-elem" ></label>
+            </div>
+        </div>
+
+    </div>
 </body>
  <script type="text/javascript" src="js/rx.all.min.js"></script>
  <script type="text/javascript" src="js/classifier.js"></script>
