--- a/web/src/index.html
+++ b/web/src/index.html
@@ -105,6 +105,5 @@
 
     </div>
 </body>
- <script type="text/javascript" src="js/rx.all.min.js"></script>
- <script type="text/javascript" src="js/classifier.js"></script>
+ <script type="text/javascript" src="classifier.js"></script>
 </html>
